# tunnel_urban_reference_datasets

./: .gitignore  README.md  apply_required_build_patches.sh
base_ws/src/: .gitignore  .rosinstall
base_ws/src/imu_reframer/: CMakeLists.txt
base_ws/src/imu_reframer/src/: imu_reframer_node.cpp  odom_repeat_filter_node.cpp  tf_to_odom_node.cpp  tf_topic_vel_to_odom_node.cpp  tf_vel_to_odom_node.cpp
base_ws/src/packbot_visualization/: CMakeLists.txt  mainpage.dox
base_ws/src/packbot_visualization/launch/: example.launch
base_ws/src/packbot_visualization/meshes/: husky.dae  packbot_simple.dae  spear_simple.dae
base_ws/src/packbot_visualization/models/: adhoc.urdf  packbot.urdf
base_ws/src/scd30_co2_humidity_temp/: CMakeLists.txt  package.xml
base_ws/src/scd30_co2_humidity_temp/msg/: scd30.msg
base_ws/src/stix_launch/: CMakeLists.txt
base_ws/src/subt_artifact_report/: CMakeLists.txt  package.xml
base_ws/src/subt_artifact_report/include/subt_artifact_report/: coding.h  relative_metric.h  subt_scoring_node.h
base_ws/src/subt_artifact_report/src/: coding.cpp  frame_alignment_node.cpp  relative_metric.cpp  subt_coding_node.cpp  subt_scoring_node.cpp
base_ws/src/subt_artifact_report/test/: test_relative_metric.cpp
base_ws/src/tf_hijacker/: mainpage.dox  package.xml
base_ws/src/tf_hijacker/src/: tf_hijacker.cpp
base_ws/src/tunnel_ckt_launch/: CMakeLists.txt
base_ws/src/tunnel_ckt_launch/config/: base_local_planner_params.yaml  octomap.yaml  robot_config.yaml
base_ws/src/tunnel_ckt_launch/config/cartographer/: cartographer_2d.lua  cartographer_2d_SubT.lua  cartographer_2d_alpha.lua  cartographer_3d_SubT.lua  cartographer_3d_SubT_gvrbot.lua  cartographer_3d_alpha.lua  cartographer_3d_chinook.lua
base_ws/src/tunnel_ckt_launch/config/kimera/: .LeftCameraParams.yaml.swp  LeftCameraParams.yaml  RightCameraParams.yaml  RightCameraParams.yaml.bak
base_ws/src/tunnel_ckt_launch/config/orb_slam_2/: MultisenseRGBD.yaml  MultisenseStereo.yaml
base_ws/src/tunnel_ckt_launch/launch/: cartographer.launch  frames.gv  full_playback.launch  msckf_image_processor.launch  orb_slam2_multisense.launch  remap.launch  tunnel_remap.launch  urban_remap.launch
base_ws/src/tunnel_ckt_launch/rviz/: cartographer_chinook.rviz  cartographer_sherman.rviz  kimera_sherman.rviz  msckf_chinook.rviz  msckf_sherman.rviz  odom_sherman.rviz  orbslam_chinook.rviz  vins_chinook.rviz
base_ws/src/urban_ckt_launch/: CMakeLists.txt  package.xml
base_ws/src/urban_ckt_launch/config/: costmap.yaml  global_costmap_params.yaml  xbox360_config.yaml
base_ws/src/urban_ckt_launch/config/cartographer/: cartographer_2d_chinook.lua  cartographer_3d.lua  cartographer_3d_SubT_gvrbot.lua  cartographer_3d_SubT_gvrbot_imu.lua  cartographer_3d_SubT_gvrbot_odom.lua  cartographer_3d_bravo.lua  cartographer_3d_gvrbotE.lua  cartographer_3d_sherman.lua  cartographer_3d_sherman_imu.lua  cartographer_3d_sherman_odom.lua
base_ws/src/urban_ckt_launch/config/kimera/: LeftCameraParams.yaml  LeftCameraParams.yaml.bak  RightCameraParams.yaml  multisense-camera-robot-imu.yaml
base_ws/src/urban_ckt_launch/config/msckf/: multisense-camera-robot-imu.yaml  realsense-camchain-imucam-d435i.yaml
base_ws/src/urban_ckt_launch/config/orb_slam_2/: MultisenseRGBD.yaml  MultisenseStereo.yaml  RealsenseRGBD.yaml  RealsenseStereo.yaml
base_ws/src/urban_ckt_launch/launch/: cartographer.launch  msckf.launch  msckf_image_processor.launch  orb_slam2_multisense.launch  orb_slam2_realsense.launch  remap.launch  test.launch  uav.launch
base_ws/src/urban_ckt_launch/rviz/: cartographer_sherman.rviz  kimera_sherman.rviz  msckf_chinook.rviz  msckf_sherman.rviz  msckf_uav.rviz  odom_sherman.rviz  omnimapper_sherman.rviz  orbslam_chinook.rviz  orbslam_sherman.rviz  orbslam_uav.rviz  vins_uav.rviz
docker/: build.bash  build_devel_entry.bash  interactive.bash  run.bash  run_bash.bash
docker/subt_reference_datasets/: Dockerfile
docker/subt_reference_datasets_deploy/: Dockerfile
docker/subt_reference_datasets_devel/: Dockerfile
kimera_ws/src/: .gitignore  .rosinstall
patches/: dbow2catkin_build_patch.diff  gflagscatkin_build_patch.diff  glogcatkin_build_patch.diff  kimeravio_build_patch.diff  opengvcatkin_build_patch.diff
src/: .gitignore  .rosinstall
src/imu_reframer/: CMakeLists.txt  package.xml
src/imu_reframer/src/: distance_traveled_node.cpp  imu_reframer_node.cpp
src/msckf_vio/config/: multisense-camera-imu-v1.yaml  multisense-camera-multisense-imu.yaml
src/msckf_vio/launch/: msckf_vio_mapping.launch
src/msckf_vio/rviz/: rviz_euroc_config.rviz
src/msckf_vio/src/: msckf_vio.cpp
src/packbot_visualization/: package.xml
src/packbot_visualization/meshes/: jackal.dae  jackal_metal.dae
src/stix_launch/: package.xml
src/stix_launch/launch/: bagmap.launch  bagplay.launch
src/subt_artifact_report/: CMakeLists.txt  package.xml
src/subt_artifact_report/include/subt_artifact_report/: .coding.h.swp
src/subt_artifact_report/src/: .subt_coding_node.cpp.swp  coding.cpp  subt_coding_node.cpp  subt_scoring_node.cpp
src/tf_hijacker/: CMakeLists.txt
src/tf_hijacker/src/: tf_hijacker.cpp
src/tunnel_ckt_launch/: package.xml
src/tunnel_ckt_launch/config/: costmap_common_params.yaml  local_costmap_params.yaml
src/tunnel_ckt_launch/config/cartographer/: .cartographer_3d_SubT.lua.swp
src/tunnel_ckt_launch/config/orb_slam_2/: MultisenseStereo.yaml
src/tunnel_ckt_launch/config/vins_fusion/: multisense-camera-left.yaml  multisense-camera-right.yaml  multisense_stereo_config.yaml
src/tunnel_ckt_launch/launch/: .cartographer.launch.swp  .remap.launch.swp  cartographer.launch  kimera_vio_ros.launch  msckf.launch  orb_slam2_multisense.launch  remap.launch
src/tunnel_ckt_launch/rviz/: kimera_chinook.rviz
