<package>
  <name>tf_hijacker</name>
  <version>0.1.0</version>
  <description>
    TF hijacker utilities.  Filter unwanted TF data, replicate lasers and defeature, etc.
  </description>
  <maintainer email="john.g.rogers59.civ@mail.mil">John Rogers</maintainer>
  <license>None</license>
  <license>ARL-LimitedRelease</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
</package>

